--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Alex website title</title>
 
     <!-- CSS  -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="app.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-<div class="parallax-container-mod active">
+<div class="parallax-container active">
     <div class="section no-pad-bot">
         <div id="index-banner" class="container">
             <br><br>
@@ -29,14 +29,25 @@
         </div>
         <br>
 
-        <div id="first-chapter" class="container  section scrollspy">
+        <div id="first-chapter" class="container  section scrollspy ">
             <div class="card">
-                <div class="col s12 z-depth-3">
+                <div class="card-image">
+                    <img src="ch1-1.jpg">
+                    <span class="card-title">Витрина</span>
+                </div>
+                <div class="card-content">
+                    <h5>Красиво оформленная витрина привлекает больше внимания, чем прозрачное стекло.
+                        Надпись смывающейся краской проще и дешевле наклеивающейся пленки.
+                        Менять надписи можно к распродажам, скидкам, праздникам.
+                        Любое событие можно быстро обыграть, публика это обязательно оценит.
+                        А красивая витрина - это еще и повод для селфи )</h5>
+                </div>
+                <div class="desc col s12 z-depth-3">
                     <div class="row">
+
+                        <img class="col s7" src="ch1-1.jpg">
+
                         <div class="col s5">
-                            <img src="ch1-1.jpg">
-                        </div>
-                        <div class="col s7">
                             <h4>Витрина</h4>
 
                             <h5>Красиво оформленная витрина привлекает больше внимания, чем прозрачное стекло.
@@ -46,7 +57,7 @@
                                 Менять надписи можно к распродажам, скидкам, праздникам.
                                 <br><br>
                                 Любое событие можно быстро обыграть, публика это обязательно оценит.
-                                <br><br>
+                                <br>
                                 А красивая витрина - это еще и повод для селфи )
                             </h5>
                         </div>
@@ -59,12 +70,28 @@
 
         <div id="second-chapter" class="container section scrollspy ">
             <div class="card">
-                <div class="col s12 z-depth-3">
+                <div class="card-image">
+                    <img src="ch2-1.jpg">
+                    <span class="card-title">Меню</span>
+                </div>
+                <div class="card-content">
+                    <p>Меню на черной графитовой поверхности, выполненное мелом или белой краской - это
+                        стильное и креативное решение. Можно выделить наиболее интересные позиции меню, обратить
+                        внимание на самые горячие предложения.
+                        <br>
+                        Если изменилась цена блюда или надо внести что-то новое, достаточно просто сделать новую
+                        надпись.
+                        <br>
+                        Меню, написанное от руки, выглядит по-домашнему, складывается впечатление, что и блюда
+                        здесь будут такие же вкусные, как дома.
+                    </p>
+                </div>
+                <div class="desc col s12 z-depth-3">
                     <div class="row">
+
+                        <img class="col s7" src="ch2-1.jpg">
+
                         <div class="col s5">
-                            <img src="ch2-1.jpg">
-                        </div>
-                        <div class="col s7">
                             <h4>Меню</h4>
 
                             <h5>Меню на черной графитовой поверхности, выполненное мелом или белой краской - это
@@ -87,12 +114,28 @@
 
         <div id="third-chapter" class="container section scrollspy">
             <div class="card">
-                <div class="col s12 z-depth-3">
-                    <div class="row ">
+                <div class="card-image">
+                    <img src="ch1-1.jpg">
+                    <span class="card-title">Пространство</span>
+                </div>
+                <div class="card-content">
+                    <p>Черная меловая поверхность подходит практически для любого интерьера. На ней можно
+                        написать крылатую фразу, пожелание, позравление с праздником - такое решение будет
+                        интересно и взрослым, и детям.
+
+                        Оформить интерьер к празднику гораздо проще с помощью мела - он легко наносится и легко
+                        смывается не оставляя следов. И для этого не надо закрывать заведение - мел не пахнет и
+                        не будет мешать гостям при оформлении пространства.
+
+                        Да и сам процесс создания новых надписей и украшения стен привлечет зрителей и
+                        посетителей.
+                    </p>
+                </div>
+
+                <div class="desc col s12 z-depth-3">
+                    <div class="row">
+                        <img class="col s7" src="ch2-1.jpg">
                         <div class="col s5">
-                            <img src="ch2-1.jpg">
-                        </div>
-                        <div class="col s7">
                             <h4>Пространство</h4>
 
                             <h5>Черная меловая поверхность подходит практически для любого интерьера. На ней можно
@@ -114,14 +157,28 @@
 
         <br>
 
-        <div id="fourth-chapter" class="container section scrollspy ">
+        <div id="fourth-chapter" class="parallax-container container section scrollspy ">
             <div class="card">
-                <div class="col s12 z-depth-3">
+                <div class="card-image">
+                    <img src="ch1-1.jpg">
+                    <span class="card-title">Штендеры</span>
+                </div>
+                <div class="card-content">
+                    <p>Уличные информационные стойки или штендеры, тоже проще сделать с черным фоном,
+                        подходящим для надписей мелом.
+
+                        На них принято писать предложение дня, размер скидки, пожелание приятного дня или
+                        сообщение о скорой распродаже.
+
+                        Красиво оформленный штендер обязательно привлекает внимание, его смотрят, читают -
+                        это
+                        именно то, что нужно.
+                    </p>
+                </div>
+                <div class="desc col s12 z-depth-3">
                     <div class="row">
+                        <img class="col s7" src="ch2-1.jpg">
                         <div class="col s5">
-                            <img src="ch2-1.jpg">
-                        </div>
-                        <div class="col s7">
                             <h4>Штендеры</h4>
 
                             <h5>Уличные информационные стойки или штендеры, тоже проще сделать с черным фоном,
@@ -130,7 +187,8 @@
                                 На них принято писать предложение дня, размер скидки, пожелание приятного дня или
                                 сообщение о скорой распродаже.
 
-                                Красиво оформленный штендер обязательно привлекает внимание, его смотрят, читают - это
+                                Красиво оформленный штендер обязательно привлекает внимание, его смотрят, читают -
+                                это
                                 именно то, что нужно.
                             </h5>
                         </div>
@@ -142,7 +200,7 @@
     </div>
 
 
-    <div class="parallax"><img src="bacground1.jpg" alt="DEMO"></div>
+    <div class="parallax"><img src="banner.jpg"></div>
 </div>
 <!-- Table of Contents -->
 <div id="menu" class="col pinned m3 l2">
@@ -158,10 +216,11 @@
 <footer class="page-footer teal">
     <div class="container">
         <div class="row">
-            <div class="col l6 s12">
+            <div class="col l8 s12">
                 <h5 class="white-text">Company Bio</h5>
 
-                <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's
+                <p class="grey-text text-lighten-4">We are a team of college students working on this project like
+                    it's
                     our full time job. Any amount would help support and continue development on this project and is
                     greatly appreciated.</p>
 
@@ -170,17 +229,10 @@
             <div class="col l3 s12">
                 <h5 class="white-text">Settings</h5>
                 <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
-                </ul>
-            </div>
-            <div class="col l3 s12">
-                <h5 class="white-text">Connect</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
+
+                    <li>
+                        <div class="white-text">946545445451</div>
+                    </li>
                     <li><a class="white-text" href="#!">Link 3</a></li>
                     <li><a class="white-text" href="#!">Link 4</a></li>
                 </ul>
