--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <span class="card-title">Витрина</span>
                 </div>
                 <div class="card-content">
-                    <h5>Красиво оформленная витрина привлекает больше внимания, чем прозрачное стекло.
+                    <div class="container">Красиво оформленная витрина привлекает больше внимания, чем прозрачное стекло.
                         Надпись смывающейся краской проще и дешевле наклеивающейся пленки.
                         Менять надписи можно к распродажам, скидкам, праздникам.
                         Любое событие можно быстро обыграть, публика это обязательно оценит.
-                        А красивая витрина - это еще и повод для селфи )</h5>
+                        А красивая витрина - это еще и повод для селфи )</div>
                 </div>
                 <div class="desc col s12 z-depth-3">
                     <div class="row">
@@ -75,7 +75,7 @@
                     <span class="card-title">Меню</span>
                 </div>
                 <div class="card-content">
-                    <p>Меню на черной графитовой поверхности, выполненное мелом или белой краской - это
+                    <div class="container">Меню на черной графитовой поверхности, выполненное мелом или белой краской - это
                         стильное и креативное решение. Можно выделить наиболее интересные позиции меню, обратить
                         внимание на самые горячие предложения.
                         <br>
@@ -84,7 +84,7 @@
                         <br>
                         Меню, написанное от руки, выглядит по-домашнему, складывается впечатление, что и блюда
                         здесь будут такие же вкусные, как дома.
-                    </p>
+                    </div>
                 </div>
                 <div class="desc col s12 z-depth-3">
                     <div class="row">
@@ -119,7 +119,7 @@
                     <span class="card-title">Пространство</span>
                 </div>
                 <div class="card-content">
-                    <p>Черная меловая поверхность подходит практически для любого интерьера. На ней можно
+                    <div class="container">Черная меловая поверхность подходит практически для любого интерьера. На ней можно
                         написать крылатую фразу, пожелание, позравление с праздником - такое решение будет
                         интересно и взрослым, и детям.
 
@@ -129,7 +129,7 @@
 
                         Да и сам процесс создания новых надписей и украшения стен привлечет зрителей и
                         посетителей.
-                    </p>
+                    </div>
                 </div>
 
                 <div class="desc col s12 z-depth-3">
@@ -164,7 +164,7 @@
                     <span class="card-title">Штендеры</span>
                 </div>
                 <div class="card-content">
-                    <p>Уличные информационные стойки или штендеры, тоже проще сделать с черным фоном,
+                    <div class="container">Уличные информационные стойки или штендеры, тоже проще сделать с черным фоном,
                         подходящим для надписей мелом.
 
                         На них принято писать предложение дня, размер скидки, пожелание приятного дня или
@@ -173,7 +173,7 @@
                         Красиво оформленный штендер обязательно привлекает внимание, его смотрят, читают -
                         это
                         именно то, что нужно.
-                    </p>
+                    </div>
                 </div>
                 <div class="desc col s12 z-depth-3">
                     <div class="row">
