--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <!-- CSS  -->
     <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="app.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-<div class="parallax-container active">
-    <div class="section no-pad-bot">
-        <div id="index-banner" class="container">
+<div id="index-banner" class="parallax-container active">
+    <div class="no-pad-bot">
+        <div class="container">
             <br><br>
 
             <h1 class="header center teal-text text-lighten-2">Calligraphy...</h1>
@@ -28,184 +28,96 @@
             <!--</div>-->
         </div>
         <br>
-
-        <div id="first-chapter" class="container  section scrollspy ">
-            <div class="card">
-                <div class="card-image">
-                    <img src="ch1-1.jpg">
-                    <span class="card-title">Витрина</span>
-                </div>
-                <div class="card-content">
-                    <div class="container">Красиво оформленная витрина привлекает больше внимания, чем прозрачное стекло.
-                        Надпись смывающейся краской проще и дешевле наклеивающейся пленки.
-                        Менять надписи можно к распродажам, скидкам, праздникам.
-                        Любое событие можно быстро обыграть, публика это обязательно оценит.
-                        А красивая витрина - это еще и повод для селфи )</div>
-                </div>
-                <div class="desc col s12 z-depth-3">
-                    <div class="row">
-
-                        <img class="col s7" src="ch1-1.jpg">
-
-                        <div class="col s5">
-                            <h4>Витрина</h4>
-
-                            <h5>Красиво оформленная витрина привлекает больше внимания, чем прозрачное стекло.
-                                <br><br>
-                                Надпись смывающейся краской проще и дешевле наклеивающейся пленки.
-                                <br><br>
-                                Менять надписи можно к распродажам, скидкам, праздникам.
-                                <br><br>
-                                Любое событие можно быстро обыграть, публика это обязательно оценит.
-                                <br>
-                                А красивая витрина - это еще и повод для селфи )
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <br>
-
-        <div id="second-chapter" class="container section scrollspy ">
-            <div class="card">
-                <div class="card-image">
-                    <img src="ch2-1.jpg">
-                    <span class="card-title">Меню</span>
-                </div>
-                <div class="card-content">
-                    <div class="container">Меню на черной графитовой поверхности, выполненное мелом или белой краской - это
-                        стильное и креативное решение. Можно выделить наиболее интересные позиции меню, обратить
-                        внимание на самые горячие предложения.
-                        <br>
-                        Если изменилась цена блюда или надо внести что-то новое, достаточно просто сделать новую
-                        надпись.
-                        <br>
-                        Меню, написанное от руки, выглядит по-домашнему, складывается впечатление, что и блюда
-                        здесь будут такие же вкусные, как дома.
-                    </div>
-                </div>
-                <div class="desc col s12 z-depth-3">
-                    <div class="row">
-
-                        <img class="col s7" src="ch2-1.jpg">
-
-                        <div class="col s5">
-                            <h4>Меню</h4>
-
-                            <h5>Меню на черной графитовой поверхности, выполненное мелом или белой краской - это
-                                стильное и креативное решение. Можно выделить наиболее интересные позиции меню, обратить
-                                внимание на самые горячие предложения.
-                                <br>
-                                Если изменилась цена блюда или надо внести что-то новое, достаточно просто сделать новую
-                                надпись.
-                                <br>
-                                Меню, написанное от руки, выглядит по-домашнему, складывается впечатление, что и блюда
-                                здесь будут такие же вкусные, как дома.
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <br>
-
-        <div id="third-chapter" class="container section scrollspy">
-            <div class="card">
-                <div class="card-image">
-                    <img src="ch1-1.jpg">
-                    <span class="card-title">Пространство</span>
-                </div>
-                <div class="card-content">
-                    <div class="container">Черная меловая поверхность подходит практически для любого интерьера. На ней можно
-                        написать крылатую фразу, пожелание, позравление с праздником - такое решение будет
-                        интересно и взрослым, и детям.
-
-                        Оформить интерьер к празднику гораздо проще с помощью мела - он легко наносится и легко
-                        смывается не оставляя следов. И для этого не надо закрывать заведение - мел не пахнет и
-                        не будет мешать гостям при оформлении пространства.
-
-                        Да и сам процесс создания новых надписей и украшения стен привлечет зрителей и
-                        посетителей.
-                    </div>
-                </div>
-
-                <div class="desc col s12 z-depth-3">
-                    <div class="row">
-                        <img class="col s7" src="ch2-1.jpg">
-                        <div class="col s5">
-                            <h4>Пространство</h4>
-
-                            <h5>Черная меловая поверхность подходит практически для любого интерьера. На ней можно
-                                написать крылатую фразу, пожелание, позравление с праздником - такое решение будет
-                                интересно и взрослым, и детям.
-
-                                Оформить интерьер к празднику гораздо проще с помощью мела - он легко наносится и легко
-                                смывается не оставляя следов. И для этого не надо закрывать заведение - мел не пахнет и
-                                не будет мешать гостям при оформлении пространства.
-
-                                Да и сам процесс создания новых надписей и украшения стен привлечет зрителей и
-                                посетителей.
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <br>
-
-        <div id="fourth-chapter" class="parallax-container container section scrollspy ">
-            <div class="card">
-                <div class="card-image">
-                    <img src="ch1-1.jpg">
-                    <span class="card-title">Штендеры</span>
-                </div>
-                <div class="card-content">
-                    <div class="container">Уличные информационные стойки или штендеры, тоже проще сделать с черным фоном,
-                        подходящим для надписей мелом.
-
-                        На них принято писать предложение дня, размер скидки, пожелание приятного дня или
-                        сообщение о скорой распродаже.
-
-                        Красиво оформленный штендер обязательно привлекает внимание, его смотрят, читают -
-                        это
-                        именно то, что нужно.
-                    </div>
-                </div>
-                <div class="desc col s12 z-depth-3">
-                    <div class="row">
-                        <img class="col s7" src="ch2-1.jpg">
-                        <div class="col s5">
-                            <h4>Штендеры</h4>
-
-                            <h5>Уличные информационные стойки или штендеры, тоже проще сделать с черным фоном,
-                                подходящим для надписей мелом.
-
-                                На них принято писать предложение дня, размер скидки, пожелание приятного дня или
-                                сообщение о скорой распродаже.
-
-                                Красиво оформленный штендер обязательно привлекает внимание, его смотрят, читают -
-                                это
-                                именно то, что нужно.
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
-
-
-    <div class="parallax"><img src="banner.jpg"></div>
+    <div class="parallax"><img src="bacground1.jpg" alt="welcome"></div>
 </div>
+
+<div id="first-chapter" class="scrollspy">
+    <div class="section">
+        <div class="container">
+            <h4>Витрина</h4>
+
+            <h5 class="light">Красиво оформленная витрина привлекает больше внимания, чем прозрачное стекло.
+                Надпись смывающейся краской проще и дешевле наклеивающейся пленки.
+                Менять надписи можно к распродажам, скидкам, праздникам.
+                Любое событие можно быстро обыграть, публика это обязательно оценит.
+                А красивая витрина - это еще и повод для селфи )
+            </h5>
+        </div>
+    </div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="ch1-1.jpg" alt="second im"></div>
+    </div>
+</div>
+
+<div id="second-chapter" class="scrollspy">
+    <div class="section">
+        <div  class="container ">
+            <h4>Меню</h4>
+
+            <h5 class="light">Меню на черной графитовой поверхности, выполненное мелом или белой краской - это
+                стильное и креативное решение. Можно выделить наиболее интересные позиции меню, обратить
+                внимание на самые горячие предложения.
+                <br>
+                Если изменилась цена блюда или надо внести что-то новое, достаточно просто сделать новую
+                надпись.
+                <br>
+                Меню, написанное от руки, выглядит по-домашнему, складывается впечатление, что и блюда
+                здесь будут такие же вкусные, как дома.
+            </h5>
+        </div>
+    </div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="ch2-1.jpg" alt="second im"></div>
+    </div>
+</div>
+
+<div id="third-chapter" class="scrollspy">
+    <div class="section">
+        <div  class="container">
+            <h4>Пространство</h4>
+
+            <h5 class="light">Черная меловая поверхность подходит практически для любого интерьера. На ней можно
+                написать крылатую фразу, пожелание, позравление с праздником - такое решение будет
+                интересно и взрослым, и детям.
+                Оформить интерьер к празднику гораздо проще с помощью мела - он легко наносится и легко
+                смывается не оставляя следов. И для этого не надо закрывать заведение - мел не пахнет и
+                не будет мешать гостям при оформлении пространства.
+                Да и сам процесс создания новых надписей и украшения стен привлечет зрителей и
+                посетителей.
+            </h5>
+        </div>
+    </div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="ch2-1.jpg" alt="second im"></div>
+    </div>
+</div>
+
+<div id="fourth-chapter" class="scrollspy">
+    <div class="section">
+        <div  class="container">
+
+            <h4>Штендеры</h4>
+            <h5 class="light">Уличные информационные стойки или штендеры, тоже проще сделать с черным фоном,
+                подходящим для надписей мелом.
+                На них принято писать предложение дня, размер скидки, пожелание приятного дня или
+                сообщение о скорой распродаже.
+                Красиво оформленный штендер обязательно привлекает внимание, его смотрят, читают -
+                это
+                именно то, что нужно.
+            </h5>
+        </div>
+    </div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="ch4.jpg" alt="second im"></div>
+    </div>
+</div>
+
+
 <!-- Table of Contents -->
 <div id="menu" class="col pinned m3 l2">
     <div style="height: 1px;">
-        <ul class="section table-of-contents">
+        <ul class="table-of-contents">
             <li><a class="z-depth-1" href="#first-chapter">Витрина</a></li>
             <li><a class="z-depth-1" href="#second-chapter">Меню</a></li>
             <li><a class="z-depth-1" href="#third-chapter">Пространство</a></li>
@@ -246,8 +158,8 @@
     </div>
 </footer>
 <!--Import .js-->
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script type="text/javascript" src="js/materialize.js"></script>
+<script src="js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 
 </body>
