--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
     <div class="parallax"><img src="bacground1.jpg" alt="welcome"></div>
 </div>
 
-<div id="first-chapter" class="scrollspy">
-    <div class="section">
+<div >
+    <div class="parallax-container">
+        <div class="parallax"><img src="ch1-1.jpg" alt="second im"></div>
+    </div>
+    <div id="first-chapter" class="scrollspy section">
         <div class="container">
             <h4>Витрина</h4>
 
-            <h5 class="light">Красиво оформленная витрина привлекает больше внимания, чем прозрачное стекло.
+            <h5 class="light ">Красиво оформленная витрина привлекает больше внимания, чем прозрачное стекло.
                 Надпись смывающейся краской проще и дешевле наклеивающейся пленки.
                 Менять надписи можно к распродажам, скидкам, праздникам.
                 Любое событие можно быстро обыграть, публика это обязательно оценит.
@@ -45,13 +48,14 @@
             </h5>
         </div>
     </div>
-    <div class="parallax-container">
-        <div class="parallax"><img src="ch1-1.jpg" alt="second im"></div>
-    </div>
+
 </div>
 
-<div id="second-chapter" class="scrollspy">
-    <div class="section">
+<div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="ch2-1.jpg" alt="second im"></div>
+    </div>
+    <div id="second-chapter" class="scrollspy section">
         <div  class="container ">
             <h4>Меню</h4>
 
@@ -67,13 +71,13 @@
             </h5>
         </div>
     </div>
+</div>
+
+<div>
     <div class="parallax-container">
         <div class="parallax"><img src="ch2-1.jpg" alt="second im"></div>
     </div>
-</div>
-
-<div id="third-chapter" class="scrollspy">
-    <div class="section">
+    <div id="third-chapter" class="scrollspy section">
         <div  class="container">
             <h4>Пространство</h4>
 
@@ -88,13 +92,13 @@
             </h5>
         </div>
     </div>
-    <div class="parallax-container">
-        <div class="parallax"><img src="ch2-1.jpg" alt="second im"></div>
-    </div>
 </div>
 
-<div id="fourth-chapter" class="scrollspy">
-    <div class="section">
+<div>
+    <div  class="parallax-container">
+        <div class="parallax"><img src="ch4.jpg" alt="second im"></div>
+    </div>
+    <div id="fourth-chapter" class="scrollspy section">
         <div  class="container">
 
             <h4>Штендеры</h4>
@@ -107,9 +111,6 @@
                 именно то, что нужно.
             </h5>
         </div>
-    </div>
-    <div class="parallax-container">
-        <div class="parallax"><img src="ch4.jpg" alt="second im"></div>
     </div>
 </div>
 
